modified:   aerospike.conf

--- a/aerospike.conf
+++ b/aerospike.conf
@@ -76,3 +76,16 @@ namespace test {
 	}
 }
 
+namespace histories {
+	replication-factor 2
+	memory-size 20G
+	default-ttl 50d # 5 days, use 0 to never expire/evict.
+
+	# To use file storage backing, comment out the line above and use the
+	# following lines instead.
+	storage-engine device {
+		file /opt/aerospike/data/histories.dat
+		filesize 40G
+		data-in-memory true # Store data in memory in addition to file.
+	}
+}
